RESOLVED FIXED300191
[GStreamer][LibWebRTC] Fix unsafe-buffer-usage-in-libc-call warning
https://bugs.webkit.org/show_bug.cgi?id=300191
Summary [GStreamer][LibWebRTC] Fix unsafe-buffer-usage-in-libc-call warning
Philippe Normand
Reported 2025-10-05 02:36:16 PDT
/WebCore/platform/mediastream/libwebrtc/gstreamer/RealtimeOutgoingVideoSourceLibWebRTC.cpp:85:5: warning: function 'memset' is unsafe [-Wunsafe-buffer-usage-in-libc-call] 85 | memset(map.data(), 0, info.size); | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 1 warning generated.
Attachments
Philippe Normand
Comment 1 2025-10-05 02:51:34 PDT
EWS
Comment 2 2025-10-06 01:41:36 PDT
Committed 301046@main (58c67c69adb5): <https://commits.webkit.org/301046@main> Reviewed commits have been landed. Closing PR #51829 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-10-06 01:42:13 PDT
Radar WebKit Bug Importer
Comment 4 2025-10-06 01:42:14 PDT
Note You need to log in before you can comment on or make changes to this bug.