[GStreamer][LibWebRTC] Fix unsafe-buffer-usage-in-libc-call warning https://bugs.webkit.org/show_bug.cgi?id=300191

Reviewed by Xabier Rodriguez-Calvar.

Use memsetSpan and driving-by, enclose the write operations in a dedicated scope.

* Source/WebCore/platform/mediastream/libwebrtc/gstreamer/RealtimeOutgoingVideoSourceLibWebRTC.cpp:
(WebCore::RealtimeOutgoingVideoSourceLibWebRTC::createBlackFrame):

Canonical link: https://commits.webkit.org/301046@main